--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <a class="page-link">&laquo;</a>
             </li>
             {% endif %}
-            {% for pagina in receitas.paginator.page_ranger%}
+            {% for pagina in receitas.paginator.page_range %}
             {% if receitas.number == pagina %}
             <li class="page-item active">
                 <a class="page-link">{{ pagina }}</a>
