--- a/templates/index.html
+++ b/templates/index.html
@@ -68,10 +68,11 @@
             <li class="page-item">
                 <a href="?page={{ receitas.next_page_number }}" class="page-link">&raquo;</a>
             </li>
-            {% endif %}
+            {% else %}
             <li class="page-item disabled">
                 <a class="page-link">&raquo;</a>
             </li>
+            {% endif %}
         </ul>
         {% endif %}
     </div>
